[Issue #188] [WIP] finishes exporting data to csv

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href= "#">csv</a></li>
+						<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
 					</ul>
 				</div>
 				<div class="btn-group">
