[issue #170] [WIP] solves server errors while recording the synonym suggestion

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -29,7 +29,7 @@
   } 
 
   function have_to_sign_in(){
-    alert(successfulWords);
+    //alert(successfulWords);
     $.post("/games/vote_errors.js");
   }
 
@@ -45,7 +45,7 @@
   }
 
   function request_vote_form(){
-    alert("from vote form");
+    //alert("from vote form");
     $('.zone').empty();
     //$('#workspace').remove();
     $('.zone').append('<div class=\"vote_form\"></div></br>');
