--- a/arability/app/views/games/record_synonym.js.erb
+++ b/arability/app/views/games/record_synonym.js.erb
@@ -1,12 +1,16 @@
 <% record_output = current_gamer.suggest_synonym(params[:synonym_name], params[:keyword_id]) %>
+<% already_existing_synonym = Synonym.where(:name => params[:synonym_name], :keyword_id => params[:keyword_id]).first %>
 <% if record_output == 2 %>
-	<% already_existing_synonym = Synonym.where(:name => params[:synonym_name], :keyword_id => params[:keyword_id]).first %>
-	<% if already_existing_synonym.approved == false %>
-		record_vote(<%= already_existing_synonym.id %>);
-		alert("already_existing_synonym");
+	<% if already_existing_synonym%>
+		<% if already_existing_synonym.approved == false %>
+			record_vote(<%= already_existing_synonym.id %>);
+			alert(already_existing_synonym);
+		<% end %>
 	<% end %>
 <% elsif record_output == 0 %>
-	record_vote(<%= already_existing_synonym.id %>);
+	<% if already_existing_synonym %>
+		record_vote(<%= already_existing_synonym.id %>);
+	<% end %>
 <% else %>
 	update_errors(<%= record_output %>);
 <% end %>
