--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -114,7 +114,7 @@
       overflow: hidden;
       width: 190px;
       line-height: 50px;
-      margin-left: 45px;
+      text-align: center;
     }
 
 .label-div{
