[issue #177][WIP] added follow word to all search results

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -127,4 +127,10 @@
 			</div>
 		</div>
 	<% end %>
+	<div class="well">
+			<span>
+				<%= t(:follow_word_link) %>
+				<%= link_to t(:follow_word_end_of_search), follow_word_path(Keyword.where(:name => @search_keyword).first.id) %>
+			</span>
+	</div>
 <% end %>
