[issue #170] [WIP]fixes a bug when ending the voting

--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -9,7 +9,9 @@ function record_vote(syn_id){
 
 function display_next_word(){
 	$('.vote_form').remove();
-	check_empty_words();
+	if(check_empty_words()){
+		return;
+	}
 	$('.zone').append('<div class=\"vote_form\"></div>');
 	var word = words.shift();
     $.post("/games/vote.js", { word: word});
