--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href= "#">csv</a></li>
+						<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
 					</ul>
 				</div>
 				<div class="btn-group">
@@ -52,9 +52,10 @@
 				<% count=0 %>
 				<% while count<50 %>
 				<tr>
-					<td style="text-align:center">hi</td>
-					<td style="text-align:center">bye</td>
-					<td><a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a>
+					<td style="text-align:center"><%= @words[count].name %></td>
+					<td style="text-align:center"><%= @synonyms[count].name %></td>
+					<td><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
+						<%= link_to t(:remove_from_project), action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id %></td>
 						<% count = count+1 %>
 					</tr>
 					<% end %>
