--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,64 +1,72 @@
 <div class="container" border="1"> 
 	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
-	<form>
-		<div class="container well">
-			<div class="btn-toolbar" style="margin: 0;">
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-file"></i> <%= t(:import) %> <span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li><a href= "<%=import_csv_project_path%>">csv</a></li>
-					</ul>
-				</div>
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
-					</ul>
-				</div>
-				<div class="btn-group">
+	<br />
+	<div class="tabbable tabs-left">
+		<ul class="nav nav-tabs">
+			<li><a href="#tab1" data-toggle="tab"><%= t(:projects_index_tab1)%></a></li>
+			<li><a href="#tab2" data-toggle="tab"><%= t(:projects_index_tab2)%></a></li>
+		</ul>
+		<div class="tab-content">
+			<p><a class="btn" href="<%= new_project_path %>"><i class="icon-plus"></i><%= t(:projects_index_add)%></a>
+				<br />
+				<br />
+				<div class="container well">
+					<div class="btn-toolbar" style="margin: 0;">
+						<div class="btn-group">
+							<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-file"></i> <%= t(:import) %> <span class="caret"></span></button>
+							<ul class="dropdown-menu">
+								<li><a href= "<%=import_csv_project_path%>">csv</a></li>
+							</ul>
+						</div>
+						<div class="btn-group">
+							<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
+							<ul class="dropdown-menu">
+								<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
+							</ul>
+						</div>
+						<div class="btn-group">
 
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-thumbs-up"></i> <%= t(:recommended_words) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-share"></i> <%= t(:share) %></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-edit"></i> <%= t(:edit_project) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-plus-sign"></i> <%= link_to t(:Add_words) , {action: "search", controller: "search", :project_id => @project.id}, {:style=>'color:#000000', :class => "css_class"} %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
-				</div>
-			</div><br>
-			<table class="table table-bordered" style="width:800px;background-color:white" >
-				<col style="width:25%">
-				<col style="width:75%">
-				<tr> 
-					<td style="text-align:center"><%= t(:word) %></td>
-					<td style="text-align:center"><%= t(:meaning) %></td>
-				</tr>
-			</table>
-			<table class="table table-hover table-bordered table-condensed"style="width:800px;background-color:white">
-				<col style="width:25%">
-				<col style="width:25%">
-				<col style="width:50%">
-				<% count=0 %>
-				<% while count<50 %>
-				<tr>
-					<td style="text-align:center"><%= @words[count].name %></td>
-					<td style="text-align:center"><%= @synonyms[count].name %></td>
-					<td><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
-						<%= link_to t(:remove_from_project), action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id %></td>
-						<% count = count+1 %>
-					</tr>
-					<% end %>
-				</table>
-			</div>
-		</form>
+						</div>
+						<div class="btn-group">
+							<button class="btn"><i class="icon-thumbs-up"></i> <%= t(:recommended_words) %> <span></span></button>
+						</div>
+						<div class="btn-group">
+							<button class="btn"><i class="icon-share"></i> <%= t(:share) %></button>
+						</div>
+						<div class="btn-group">
+							<button class="btn"><i class="icon-edit"></i> <%= t(:edit_project) %> <span></span></button>
+						</div>
+						<div class="btn-group">
+							<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
+						</div>
+						<div class="btn-group">
+							<button class="btn"><i class="icon-plus-sign"></i> <%= link_to t(:Add_words) , {action: "search", controller: "search", :project_id => @project.id}, {:style=>'color:#000000', :class => "css_class"} %> <span></span></button>
+						</div>
+						<div class="btn-group">
+							<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
+						</div>
+					</div><br>
+					<table class="table table-bordered" style="width:800px;background-color:white" >
+						<col style="width:25%">
+						<col style="width:75%">
+						<tr> 
+							<td style="text-align:center"><%= t(:word) %></td>
+							<td style="text-align:center"><%= t(:meaning) %></td>
+						</tr>
+					</table>
+					<table class="table table-hover table-bordered table-condensed"style="width:800px;background-color:white">
+						<col style="width:25%">
+						<col style="width:25%">
+						<col style="width:50%">
+						<% count=0 %>
+						<% while count<50 %>
+						<tr>
+							<td style="text-align:center"><%= @words[count].name %></td>
+							<td style="text-align:center"><%= @synonyms[count].name %></td>
+							<td><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
+								<%= link_to t(:remove_from_project), action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id %></td>
+								<% count = count+1 %>
+							</tr>
+							<% end %>
+						</table>
+					</div>
