--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -63,16 +63,22 @@
                 :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div></br>
 
             <div><%= f.label t(:gender), :class => "control-label" %>
-            <%= f.select(:gender,options_for_select(['ذكر','انثي']),{}, :style => "margin-left: 10px;" ) %></div></br>  
+            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']]),{}, :style => "margin-left: 10px;" ) %></div></br>  
+
 
             <div><%= f.label t(:country), :class => "control-label" %>
-                <%= f.select(:country, options_for_select(['مصر','لبنان','الاردن','السعودية','ليبيا','الامارات','قطر','الكويت',
-                    'العراق','الجزأئر','المغرب','البحرين','موريتانيا','الصومال','السودان']), {},
+                <%= f.select(:country, options_for_select([['مصر','Egypt'],['لبنان','Lebanon'],
+                    ['الاردن','Jordan'],['السعودية','Saudi Arabia'],['ليبيا','Libya'],['الامارات','United Arab Emirates'],['قطر','Qatar'],['الكويت','Kuwait'],
+                    ['العراق','Iraq'],['الجزأئر','Algeria'],['المغرب','Morocco'],['البحرين','Bahrain'],
+                    ['موريتانيا','mauritania'],['الصومال','Somalia'],['السودان','Sudan'],['تونس','Tunisia'],
+                    ['اخري','others']]), {},
                 {:style => "margin-left: 10px;" }) %>
             </div></br>
 
+
             <div><%= f.label t(:education_level), :class => "control-label" %>
-            <%= f.select(:education_level, options_for_select(['','منخفض','متوسط','عالي']), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
+            ['خريج','graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
 
             <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
 
