--- a/arability/app/views/games/getprizes.js.erb
+++ b/arability/app/views/games/getprizes.js.erb
@@ -3,15 +3,14 @@
     $("#zone").append($(error));
 
 <% else %>
-  <% if @level == nil || @score == nil %>
+  <% if @level == 0 || @score == 0 %>
       error = '<div class="alert" style="text-align:right; margin:10px;">' +
               '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
-              '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
+              '<strong><%= t(:warning) %></strong> <%= t(:nil_prizes) %>' + '</div>';
       $("#zone").append($(error));
   <% else %>
     <% if @won_prizes.length != 0 %>
-        <% @won_prizes.map { |wp| current_gamer.prizes << wp } %>
-        success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
+        success = '<h1 class="award-title"><%= t(:won_prizes) %></h1>';
         prizes = [];
 
         <% @won_prizes.each do |p| %>
