[Issue #202][WIP] changed some files

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -117,7 +117,7 @@
 					<div class="accordion-inner">
 						<!-- add charts here -->
 						<% if Vote.where('synonym_id=?', synonym.id).exists? %>
-						<div style="background-color: white; width: 880px; margin: 0 auto;">
+						<div class="centered_div" style="background-color: white; width: 880px; margin: 0 auto;">
 				    <div class="container-fluid">
               <div class="row-fluide">
                 <div class="span2">
