--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,15 @@
 <% else I18n.locale==:ar %>
 <em><h3 class="text-info">تغيير البيانات</h3></em>
 <% end %>
-<div class="well">
+
+<div class="tabbable"> <!-- Only required for left/right tabs -->
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:my_info)%></a></li>
+    <li><a href="#tab2" data-toggle="tab"><%= t(:social_media)%></a></li>
+  </ul>
+  <div class="tab-content" style="width:1200px;">
+    <div class="tab-pane active" id="tab1">
+      <div class="well" style="width:1100px; height:480px">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal" }) do |f| %>
   <% if resource.errors.any? %>
   <div class="alert"><%= devise_error_messages! %></div>
@@ -81,5 +89,20 @@
 </div>
 </div>
 <% end %>
+    </div>
+    <div class="tab-pane" id="tab2">
+      <div class="well" style="width:1100px; height:480px">
+        <p font='20'><%= t(:connect_to)%> <%= link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p font='20'><%= t(:connect_to)%> <%= link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
+
+
+
+
+
+
+
+
