--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
+<% if I18n.locale == :ar %>
+<em><h3 class="text-info"> انشاء حساب جديد للاعب</h3></em>
+<% else %>
 <em><h3 class="text-info">Sign up <%= resource_name.to_s.humanize %></h3></em>
-
+<% end %>
 <div class="container well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <% if resource.errors.any? %>
@@ -35,7 +38,7 @@
             </div></br>
 
             <div><%= f.label :education_level, :class => "control-label" %>
-            <%= f.select(:education_level, options_for_select(['','low','medium','high']), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            <%= f.select(:education_level, options_for_select(['','School','University','graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
 
             <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
 
@@ -80,7 +83,7 @@
             <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
             ['خريج','graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
 
-            <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
+            <div><%= f.submit "سجل الحساب", :class => "btn btn-success" %></div>
 
         </div>
         
