--- a/arability/app/views/projects/share.html.erb
+++ b/arability/app/views/projects/share.html.erb
@@ -1,6 +1,27 @@
-<%= form_for @project, :url => "/developers/projects/share_project_with_developer" do |f| %>
+<div class="well" style="height:500px;">
+	<%= form_for @project, :url => "/developers/projects/share_project_with_developer" do |f| %>
 <%= hidden_field_tag "id", @project.id%>
-  <%= f.label "Email Address"%>
-  <%= text_field :email,""%>
-  <%= f.submit "Share"%>
+  <%= f.label "#{t(:email2)}"%>
+  <div class="form-search">
+  <%= text_field :email,"", :placeholder=>"Please enter an email"%>
+  <%= f.submit "#{t(:share)}", :class => "btn btn-success"%>
+</div>
+</br>
+<% if @project.developers_shared.size == 0 %>
+<span style="color:red;"> <%=t(:not_shared) %></span>
+<% else %>
+    <table class="table table-hover table-bordered" style="width:600px">
+    	<tr>
+    		<td>
+<% @project.developers_shared.each do |dev|%>
+            <%= dev.name %>
+            
+            <a href="/developers/projects/remove_developer_from_project?dev_id=<%=dev.id%>&project_id=<%=@project.id%>"><i class="icon-remove"></i></a>
+            <br />
+          <% end %>
+      </td>
+      </tr>
+      </table>
 <%end%>
+<%end%>
+</div>
