[Issue #210][WIP] adding tests

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -6,7 +6,7 @@
 <div class="tabbable tabs-left">
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:projects_index_tab1)%></a></li>
-    <li><a href="#tab2" data-toggle="tab"><%= t(:projects_index_tab2)%></a></li>
+    <li><a id="projects_shared" href="#tab2" data-toggle="tab"><%= t(:projects_index_tab2)%></a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
