[Issue #195][WIP] aligned both spinners on the same level

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -36,11 +36,10 @@
 									<%= label_tag t(:age_from), nil, :class => "control-label", :style => "width:80px;" %>
 									&nbsp;
 									<%= number_field_tag :age_from, nil, :in => 10...101, :class => "control", :style => "width:70px;" %>
-								</div>
-								<div class="control-group">
-									<%= label_tag t(:age_to), nil, :class => "control-label", :style => "width:80px;" %>
 									&nbsp;
-									<%= number_field_tag :age_to, nil, :in => 10...101, :class => "control", :style => "width:70px;" %>
+									<%= label_tag t(:age_to), nil, :style => "width:20px;" %>
+									&nbsp;
+									<%= number_field_tag :age_to, nil, :in => 10...101, :style => "width:70px;" %>
 								</div>
 							</div>
 						</div>
