[Issue #202][WIP] fixed small function in the view

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -97,7 +97,7 @@
      									<span style="display:none"><%=t(:hide_stats)%></span>
 		     							<script type="text/javascript">
 												function reduce_div_height(){
-													$('.highcharts-container').css('height', '250px');
+													$('.centered_div .highcharts-container').css('height', '250px');
 												}
 		                  </script>
 								</button>
