--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -83,8 +83,8 @@
     <div class="nav-box">
      إعدادات
     </div>
-    <div id="level" class="nav-box">
-      
+    <div class="nav-box">
+      دعوات
     </div>
   </div>
 
