[Issue #210][WIP] modified test a bit, changed redirects in index action and changed if condition to check shared_projects size

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -77,7 +77,7 @@
     </div>
     <div class="tab-pane" id="tab2">
       <p>
-        <%if @shared_projects == nil%>
+        <%if @shared_projects.size == 0%>
           <span style="color:red;"><%= t(:projects_index_no_shared_projects)%></span>
         <%else%>
           <%counter_bigloop = 0%>
