[#181][WIP] updated views finish links

--- a/arability/app/views/authentications/remove_twitter_connection.html.erb
+++ b/arability/app/views/authentications/remove_twitter_connection.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "Connect", "/auth/twitter" %>
     </div>
     <br>
-    <%= link_to "Finish", root_path %>
+    <%= link_to "Finish", "/gamers/edit" %>
 </div>
 
 <% else I18n.locale==:ar %>
@@ -21,7 +21,7 @@
         <%= link_to "تواصل", "/auth/twitter" %>
     </div>
     <br>
-    <%= link_to "إنتهاء", root_path %>
+    <%= link_to "إنتهاء", "/gamers/edit" %>
 </div>
 
 <% end %>
