--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
   <title>Arability</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "games", :media => "all" %>
+  <%= stylesheet_link_tag "pages", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "pages" %>
   <% if I18n.locale == :ar %>
     <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
