[Issue #195][WIP] modified a bug in the view

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -11,8 +11,8 @@
 			<% end %>
 			<div class="row" style="padding:10px;">
 				<div class="span12">
-						<button type="button" class="btn btn-mini" data-toggle="collapse" data-target="#filter">
-							<span id="filter_btn" class="icon-plus" onClick="toggle_me()"></span>
+						<button type="button" class="btn btn-mini" onClick="toggle_me()" data-toggle="collapse" data-target="#filter">
+							<span id="filter_btn" class="icon-plus"></span>
 							<script type="text/javascript">
 								function toggle_me(){
 									$("#filter_btn").toggleClass('icon-minus');
