--- a/arability/app/assets/stylesheets/pages.css.scss
+++ b/arability/app/assets/stylesheets/pages.css.scss
@@ -8,7 +8,8 @@ div.item img {
 }
 
 ol.carousel-indicators {
-	position: relative;
-	margin-left: 47%;
-	margin-right: 43%;
+	width: 50px;
+	position: absolute;
+	margin-left: 50%;
+	margin-right: 50%;
 }
