--- a/arability/app/views/projects/share.html.erb
+++ b/arability/app/views/projects/share.html.erb
@@ -3,7 +3,7 @@
 <%= hidden_field_tag "id", @project.id%>
   <%= f.label "#{t(:email2)}"%>
   <div class="form-search">
-  <%= text_field :email,"", :placeholder=>"Please enter an email"%>
+  <%= text_field :email,"", :placeholder=>"Please enter an email",:value=>"Email"%>
   <%= f.submit "#{t(:share)}", :class => "btn btn-success"%>
 </div>
 </br>
