--- a/arability/app/assets/stylesheets/admin.css.scss
+++ b/arability/app/assets/stylesheets/admin.css.scss
@@ -1,3 +1,12 @@
+body {
+  font-size: 110%;
+}
+
+li.nav-header {
+  font-size: 150%;
+  margin: 10px;
+}
+
 .offset25top {
 	margin-top: 5%;
 }
@@ -98,4 +107,10 @@ div#myModalPrize div.prize-view {
   -webkit-border-radius: 0 0 0 0;
   -moz-border-radius: 0 0 0 0;
   border-radius: 0 0 0 0;
+}
+
+div.trophy, div.prize {
+  -webkit-box-shadow: inset 0 1px 1px rgba(5, 0, 0, 0.5);
+  -moz-box-shadow: inset 0 1px 1px rgba(5, 0, 0, 0.5);
+  box-shadow: inset 0 1px 1px rgba(5, 0, 0, 0.5);
 }
