--- a/arability/app/views/admin/_admin-list-trophies.html.erb
+++ b/arability/app/views/admin/_admin-list-trophies.html.erb
@@ -4,7 +4,7 @@
     <h3 id="myModalLabel">تأكيد المسح</h3>
   </div>
   <div class="modal-body">
-    <p>هل أنت متأكد من مسح المدالية؟؟</p>
+    <p>هل أنت متأكد من مسح الانجاز</p>
     <div class="prize-view"></div>
   </div>
   <div class="modal-footer">
@@ -14,7 +14,7 @@
 </div>
 <legend>
   <a>
-    عرض المداليات
+    عرض الانجازات
   </a>
 </legend>
 <% @trophies_list.each do |t| %>
