--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -6,23 +6,24 @@
 					<li class="active">
 						<a href="#admin-home" data-toggle="tab">الصفحة الرئيسية</a>
 					</li>
-					<li class="divider"></li>
 					<li class="nav-header">إدارة الكلمات</li>
+					<li class="divider"></li>
 					<li>
 						<a href="#admin-add-word" data-toggle="tab">إضافة كلمة جديدة</a>
 					</li>
 					<li>
 						<a href="#admin-import-csv-file" data-toggle="tab">استيراد ملف كلمات بصيغة CSV</a>
 					</li>
+					<li class="nav-header">إدارة الانجازات</li>
 					<li class="divider"></li>
-					<li class="nav-header">إدارة الميداليات</li>
 					<li>
-						<a href="#admin-add-trophy" data-toggle="tab">إضافة مدالية جديدة</a>
+						<a href="#admin-add-trophy" data-toggle="tab">إضافة انجاز جديدة</a>
 					</li>
 					<li>
-						<a href="#admin-list-trophies" data-toggle="tab">عرض المداليات</a>
+						<a href="#admin-list-trophies" data-toggle="tab">عرض الانجازات</a>
 					</li>
 					<li class="nav-header">إدارة الجوائز</li>
+					<li class="divider"></li>
 					<li>
 						<a href="#admin-add-prize" data-toggle="tab">إضافة جائزة جديدة</a>
 					</li>
