--- a/arability/app/views/layouts/admin.html.erb
+++ b/arability/app/views/layouts/admin.html.erb
@@ -28,6 +28,7 @@
 	<%= javascript_include_tag "jquery.min" %>
 	<%= javascript_include_tag "bootstrap.rtl" %>
 	<%= javascript_include_tag "jquery.validate" %>
+	<%= javascript_include_tag "bootstrap-fileupload.min" %>
 	<%= javascript_include_tag "admin" %>
 </body>
 </html>
