modify user interface

--- a/arability/app/views/admin/_admin-add-trophy.html.erb
+++ b/arability/app/views/admin/_admin-add-trophy.html.erb
@@ -2,7 +2,7 @@
 	<fieldset>
 		<legend>
 			<a>
-				إضافة انجاز جديدة
+				إضافة انجاز جديد
 			</a>
 		</legend>
 		<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
