--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container admin">
 	<div class="row">
 		<div class="span3">
-			<div class="well">
+			<div class="well nav-fixed">
 				<ul class="nav nav-list nav-stacked" id="admin-tabs">
 					<li class="active">
 						<a href="#admin-home" data-toggle="tab">الصفحة الرئيسية</a>
@@ -17,7 +17,7 @@
 					<li class="nav-header">إدارة الانجازات</li>
 					<li class="divider"></li>
 					<li>
-						<a href="#admin-add-trophy" data-toggle="tab">إضافة انجاز جديدة</a>
+						<a href="#admin-add-trophy" data-toggle="tab">إضافة انجاز جديد</a>
 					</li>
 					<li>
 						<a href="#admin-list-trophies" data-toggle="tab">عرض الانجازات</a>
@@ -33,10 +33,10 @@
 				</ul>
 			</div>
 		</div>
-		<div class="span9">
+		<div class="span9 offset3">
 			<div class="tab-content">
-				<div class="tab-pane well span7" id="admin-home">
-					
+				<div class="tab-pane well span7 active" id="admin-home">
+					<%= render 'admin-home-page' %>
 				</div>
 				<div class="tab-pane well span7" id="admin-add-word">
 					<%= render 'admin-add-word' %>
