--- a/arability/app/assets/stylesheets/admin.css.scss
+++ b/arability/app/assets/stylesheets/admin.css.scss
@@ -114,3 +114,7 @@ div.trophy, div.prize {
   -moz-box-shadow: inset 0 1px 1px rgba(5, 0, 0, 0.5);
   box-shadow: inset 0 1px 1px rgba(5, 0, 0, 0.5);
 }
+
+div.nav-fixed {
+  position: fixed;
+}
