--- a/arability/app/views/admin/_admin-add-prize.html.erb
+++ b/arability/app/views/admin/_admin-add-prize.html.erb
@@ -7,9 +7,9 @@
 		</legend>
 		<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:name]? ' error' : ''%>">
-			<label class="control-label" for="inputName">إسم الجائزة</label>
+			<label class="control-label" for="inputprizeName">إسم الجائزة</label>
 			<div class="controls">
-				<input type="text" id="inputName" placeholder="إسم الجائزة" name="name" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:name] : ''%>">
+				<input type="text" id="inputprizeName" placeholder="إسم الجائزة" name="name" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:name] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:name] %>
 					<% flash[:error][:name].each do |er| %>
 						<span class="help-block"><%= er %></span>
@@ -18,9 +18,9 @@
 			</div>
 		</div>
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:level]? ' error' : ''%>">
-			<label class="control-label" for="inputScore">المستوى</label>
+			<label class="control-label" for="inputprizeScore">المستوى</label>
 			<div class="controls">
-				<input type="text" id="inputScore" placeholder="المستوى المطلوب للحصول على الجائزة" name="level" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:level] : ''%>">
+				<input type="text" id="inputprizeScore" placeholder="المستوى المطلوب للحصول على الجائزة" name="level" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:level] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:level] %>
 					<% flash[:error][:level].each do |er| %>
 						<span class="help-block"><%= er %></span>
@@ -29,9 +29,9 @@
 			</div>
 		</div>
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:score]? ' error' : ''%>">
-			<label class="control-label" for="inputRank">مجموع النقاط</label>
+			<label class="control-label" for="inputprizeRank">مجموع النقاط</label>
 			<div class="controls">
-				<input type="text" id="inputRank" placeholder="مجموع النقاط المطلوب للحصول على الجائزة" name="score" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:score] : ''%>">
+				<input type="text" id="inputprizeRank" placeholder="مجموع النقاط المطلوب للحصول على الجائزة" name="score" value="<%= @fargs && @fargs[:addprize]? @fargs[:addprize][:score] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:score] %>
 					<% flash[:error][:score].each do |er| %>
 						<span class="help-block"><%= er %></span>
