--- a/arability/app/views/admin/_admin-add-trophy.html.erb
+++ b/arability/app/views/admin/_admin-add-trophy.html.erb
@@ -9,7 +9,7 @@
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:name]? ' error' : ''%>">
 			<label class="control-label" for="inputName">إسم الانجاز</label>
 			<div class="controls">
-				<input type="text" id="inputName" placeholder="إسم الانجاز" name="name" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:name] : ''%>">
+				<input type="text" id="inputName" placeholder="إسم الانجاز" name="name" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:name] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:name] %>
 					<% flash[:error][:name].each do |er| %>
 						<span class="help-block"><%= er %></span>
@@ -20,7 +20,7 @@
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:level]? ' error' : ''%>">
 			<label class="control-label" for="inputScore">المستوى</label>
 			<div class="controls">
-				<input type="text" id="inputScore" placeholder="المستوى المطلوب للحصول على الانجاز" name="level" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:level] : ''%>">
+				<input type="text" id="inputScore" placeholder="المستوى المطلوب للحصول على الانجاز" name="level" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:level] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:level] %>
 					<% flash[:error][:level].each do |er| %>
 						<span class="help-block"><%= er %></span>
@@ -31,7 +31,7 @@
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:score]? ' error' : ''%>">
 			<label class="control-label" for="inputRank">مجموع النقاط</label>
 			<div class="controls">
-				<input type="text" id="inputRank" placeholder="مجموع النقاط المطلوب للحصول على الانجاز" name="score" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:score] : ''%>">
+				<input type="text" id="inputRank" placeholder="مجموع النقاط المطلوب للحصول على الانجاز" name="score" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:score] : ''%>" class="span4">
 				<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:score] %>
 					<% flash[:error][:score].each do |er| %>
 						<span class="help-block"><%= er %></span>
