--- a/arability/app/views/admin/_admin-add-word.html.erb
+++ b/arability/app/views/admin/_admin-add-word.html.erb
@@ -17,7 +17,7 @@
 		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addword' && flash[:error][:name]? ' error' : ''%>">
 			<label class="control-label" for="inputkeyword">الكلمة</label>
 			<div class="controls">
-				<input type="text" id="inputkeyword" name="keyword[name]" placeholder="الكلمة" value="<%=@fargs && @fargs[:keyword]? @fargs[:keyword][:name] : ''%>">
+				<input type="text" id="inputkeyword" name="keyword[name]" placeholder="الكلمة" value="<%=@fargs && @fargs[:keyword]? @fargs[:keyword][:name] : ''%>" class="span4">
 				<button type="submit" class="btn btn-primary pull-left">إضافة الكلمة</button>
 				<% if flash[:error] && flash[:errortype] == 'addword' && flash[:error][:name] %>
 					<% flash[:error][:name].each do |er| %>
