add game screen shot and game play button

--- a/arability/app/assets/stylesheets/pages.css.scss
+++ b/arability/app/assets/stylesheets/pages.css.scss
@@ -13,3 +13,12 @@ ol.carousel-indicators {
 	margin-left: 50%;
 	margin-right: 50%;
 }
+
+img.game-preview {
+	width: 450px;
+	height: 320px;
+}
+
+div.game-preview-container a {
+	text-decoration: none;
+}
