--- a/arability/app/views/follow/list_followed.html.erb
+++ b/arability/app/views/follow/list_followed.html.erb
@@ -1,5 +1,6 @@
 <% if !@keywords.empty? %>
-<table class="table table-striped">
+<div style="width:800px; margin:0 auto;">
+<table class="table table-hover">
   <thead>
     <tr>
       <th><%= t(:words)%></th>
@@ -9,11 +10,16 @@
   <% @keywords.each do |keyword| %>
     <tr>
         <td><%= keyword.name %></td>
-        <td><%= link_to t(:unfollow), unfollow_word_path(keyword.id), :class => "btn btn-danger" %></td>
+        <% if I18n.locale==:en %>
+        <td><span class="pull-right"><%= link_to t(:unfollow), unfollow_word_path(keyword.id), :class => "btn btn-primary" %></span></td>
+        <% else %>
+        <td><span class="pull-left"><%= link_to t(:unfollow), unfollow_word_path(keyword.id), :class => "btn btn-primary" %></span></td>
+        <% end %>
     </tr>
   <% end %> 
   </tbody>
 </table>
+</div>
 <% else %>
 <h4><%= t(:no_followed_words) %></h4>
 <% end %> 
