--- a/arability/app/views/projects/import_csv.html.erb
+++ b/arability/app/views/projects/import_csv.html.erb
@@ -11,6 +11,8 @@
 			<li><%=t(:import_csv_list1)%></li>
 			<li><%=t(:import_csv_list2)%></li>
 			<li><%=t(:import_csv_list3)%></li>
+			<li><%=t(:import_csv_list4)%></li>
+			<li><%=t(:import_csv_list5)%></li>
 		</ol>
 	</div>
  
