[Isue #210][WIP] increased distance between projects

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -45,7 +45,7 @@
               <% end %>
             </div>
           </td>
-          <td class="sapn12"></td>
+          <td style="width:40px;"></td>
             <%if project2 != nil%>
               <td class="span5">
                 <div class="well well-small">
@@ -107,7 +107,7 @@
   <br />
 </div>
     </td>
-    <td class="sapn12"></td>
+    <td style="width:40px;"></td>
     <%if project2 != nil%>
       <td class="span5">
       <div class="well well-small">
