--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -5,6 +5,12 @@
   function clear() {
     $("#zone").empty();
   }
+  
+  function getScoreOnly(score) {
+    clear();
+    $.get("/games/get_score_only?score=" + score)
+  }
+  
   function get_words(){
     return words;
   }
