[WIP][cleaning up and adding redirects to prizes, trophies and voting views

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -17,12 +17,8 @@
   function check_empty_words(){
     if(words.length == 0){
     //$('.zone').append('<div style="position:center; background-color: yellow;">DONE VOTING</div>');
-      if(win == true){
-        $('.zone').append('<div><button class="btn btn-success" style="" type="submit"  onclick="nextLevel()">Go to next level</button></div>');
-      }
-      else{
-        $('.zone').append('<div><a class="btn btn-success" href="/game">Restart Game</a></div>');
-      }
+        // $('.zone').append('<div><button class="btn btn-success" style="" type="submit"  onclick="nextLevel()">Go to next level</button></div>');
+        getTrophies(level, score);
       return true;
     }else{
       return false;
