--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -202,9 +202,10 @@ margin-left: 80px;
 }
 
 #btn-restart{
-  width: 200px;
+  width: 160px;
   height: 29px;
-  margin-left: 30px;
+  margin-right: 40px;
+  line-height: 2;
 }
 
 #game-score{
@@ -456,4 +457,13 @@ margin-left: 80px;
   margin-right:100px;
 }
 
+#empty-db-msg{
+  width: 600px;
+  color: white;
+  margin-right: auto;
+  padding-top: 150px;
+  text-align: center;
+  font-family: h;
+  margin-left: auto;
+}
 
